[package]
name = "soroban-timelock-contract"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
tracing = "0.1"
webhook = { path = "../../webhook" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
